# but_why

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
app/: __init__.py
app/templates/: base.html  questions.html  start.html
