[tool.poetry]
name = "but_why"
version = "0.1.0"
description = ""
authors = ["xenia <xhartmann@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
